# lodgen

./: .gitignore  CMakeLists.txt  README.md
lodgen/: lodgen.cpp  lodgen.hpp  mesh_simplifier.cpp  mesh_simplifier.hpp  scene_io.cpp  scene_io.hpp  texture_atlas.cpp  texture_atlas.hpp  texture_processor.cpp  texture_processor.hpp  types.hpp
lodgencli/: main.cpp
src/: main.cpp
